# CHANGELOG
##############


Version 0.4.*: 
------------
2: Problem with dnmd file ending solved
1: Critical bugfix for read_annotate__diamond

Version 0.3.*:
--------------
65: annotate modue renamed to mag_annotate
64: Kraken2 has now a /dev/shm -> nvme -> orig failproof speedup
63: Totally overhauled escalation system added to all rules.
62: Option to turn off the use of /dev/shm drive
61: Puhti slurm profil adjsuted for output and error
60: Escalation system added to preprocess_diamond
59: Escalation system added to preprocess_bowtie2
58: Escalation function updated, it needs an additional argument to work dynamically
57: kraken rule chooses either the shm or the nvme disc, depending on db size and disc space availability
56: Fixed some log entries to avoid emtpy log files
55: Updated the README to be more explicit how to setup a fresh installed pipeline
54: Full_node resource set introduced in config/config.yaml
53: shm_storage introduced in config/config.yaml
52: Removed conda from quantify and added escalation rulesets to all quantify/*.smk files
51: Quantify is now part of the rule all
50: Cosmetic changes for the escalation setting
49: Fixed a bug that prevented a dryrun to run while escalating resources were defined
48: Added the singularity-prefix to the run script
47: Added resource sets, resource escalation functions and retries (trial in helpers__fastqc)
46: Sylph for contigs and mags removed for now
45: DRAM distill input fixed, annotation had wrong scaffold entry so output was too strongly condensed
44: Sylp added to annotate module
43: contig_annotate__sylp added
42: preprocess__sylph added
41: --keep-going added as default option to run the pipeline
40: Order of the host decontamination changed, to avoid sequence similarity problems between different genomes
39: Hard-coded threads in reference__hosts__recompress changed to variable
39: Added the missing proteinortho files to be moved into result folder
38: Fixed the output for proteinortho