@@ -7,7 +7,7 @@ import yaml
 import os
 
 DEBUG = True
-version = "0.4.2"
+version = "0.4.3"
 
 def debug(msg):
     if DEBUG:
